Fixed scroll flickering bug.

--- a/cssDoc.css
+++ b/cssDoc.css
@@ -10,6 +10,10 @@
 			-moz-text-size-adjust: 100%;
 			-ms-text-size-adjust: 100%;
 			background-color: #191919;
+			background-image: url("desk-work-software-enchanced1.jpg");
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-attachment: fixed;
 		}
 		
 		/* Scroll Progress Bar */
@@ -29,13 +33,17 @@
 		
 		/*imageOnBg*/
 		#designImg {
-			position: fixed;
-			height: 100%;
-			width: 100%;
+			height: 100vh;
 			background-image: url("desk-work-software-enchanced1.jpg");
 			background-repeat: no-repeat;
-			background-size: cover
+			background-size: cover;
+			background-attachment: fixed;
+			overflow: hidden;
+			-webkit-transform: translate3d(0, 0, 0);
+			-webkit-backface-visibility: hidden;
+			-webkit-perspective: 1000;
 		}
+		
 		/*
 		#designImg2 {
 			height: 100%;
@@ -200,7 +208,8 @@
 			position: relative;
 			height: 100%;
 			min-height: 400px;
-			background-color: rgba(20, 20, 20, 0.5)
+			background-color: rgba(20, 20, 20, 0.5);
+			
 		}
 		.titleLarge {
 			color: #fff;
